listo para poder desplegar

--- a/Challenge_8.ipynb
+++ b/Challenge_8.ipynb
@@ -1,25 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Lajs5257/Professional-en-Data-Science-AI/blob/main/Challenge_8.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -27,6 +12,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "9F9WgW1TkcFc"
+      },
       "source": [
         "# Challenge (8/8): Datos abiertos del Instituto Nacional de Estadística y Geografía (INEGI)\n",
         "\n",
@@ -39,13 +27,13 @@
         "2. Permitir que un conjunto de controles utilicen el mismo callback para actualizar un conjunto de gráficas.\n",
         "\n",
         "Siguiendo la dinámica del reto anterior, vamos a revisar más particularidades de los callbacks."
-      ],
-      "metadata": {
-        "id": "9F9WgW1TkcFc"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "VUTdJ7huJKM2"
+      },
       "source": [
         "## 1. Dashboard deployment\n",
         "\n",
@@ -53,23 +41,42 @@
         "* Control de versiones\n",
         "* Ejecución de código Python en un ambiente sin notebooks\n",
         "* Deployment de una aplicación web"
-      ],
-      "metadata": {
-        "id": "VUTdJ7huJKM2"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "fc1m_4sIOLAk"
+      },
       "source": [
         "Ya estamos listos. Hagamos que todo el mundo pueda ver ese grandioso dashboard 😄 ¡Manos a la obra!\n",
         "\n",
         "Para este reto no ocuparemos Colab para desarrollo. Seguiremos en su lugar, el siguiente [tutorial](https://dash.plotly.com/deployment).\n",
         "\n",
         "¡Buena suerte, Dani! #TodosSomosDani"
-      ],
-      "metadata": {
-        "id": "fc1m_4sIOLAk"
+      ]
+    }
+  ],
+  "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3.10.7 64-bit (microsoft store)",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.10.7"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "2ab61dab0ad8370fc61856a8ba95d56b359e45188f1b1883e5173a8a5e025242"
       }
     }
-  ]
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
