--- a/Proyecto.ipynb
+++ b/Proyecto.ipynb
@@ -47,240 +47,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 106,
+      "execution_count": 112,
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>id</th>\n",
-              "      <th>clee</th>\n",
-              "      <th>nom_estab</th>\n",
-              "      <th>raz_social</th>\n",
-              "      <th>codigo_act</th>\n",
-              "      <th>nombre_act</th>\n",
-              "      <th>per_ocu</th>\n",
-              "      <th>tipo_vial</th>\n",
-              "      <th>nom_vial</th>\n",
-              "      <th>tipo_v_e_1</th>\n",
-              "      <th>...</th>\n",
-              "      <th>localidad</th>\n",
-              "      <th>ageb</th>\n",
-              "      <th>manzana</th>\n",
-              "      <th>telefono</th>\n",
-              "      <th>correoelec</th>\n",
-              "      <th>www</th>\n",
-              "      <th>tipoUniEco</th>\n",
-              "      <th>latitud</th>\n",
-              "      <th>longitud</th>\n",
-              "      <th>fecha_alta</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>32374</td>\n",
-              "      <td>01001311812004094000000000U8</td>\n",
-              "      <td>4 HERMANOS</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>311812</td>\n",
-              "      <td>Panificación tradicional</td>\n",
-              "      <td>31 a 50 personas</td>\n",
-              "      <td>CALLE</td>\n",
-              "      <td>LIMA</td>\n",
-              "      <td>CALLE</td>\n",
-              "      <td>...</td>\n",
-              "      <td>Aguascalientes                                ...</td>\n",
-              "      <td>2047</td>\n",
-              "      <td>32</td>\n",
-              "      <td>4499168611</td>\n",
-              "      <td>AGELICADELHER@HOTMAIL.COM</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>Fijo</td>\n",
-              "      <td>21.872900</td>\n",
-              "      <td>-102.308631</td>\n",
-              "      <td>2014-12</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>6710478</td>\n",
-              "      <td>01001315223001071001000000U5</td>\n",
-              "      <td>4M COMERCIALIZADORA</td>\n",
-              "      <td>4M COMERCIALIZADORA SA DE CV</td>\n",
-              "      <td>315223</td>\n",
-              "      <td>Confección en serie de uniformes</td>\n",
-              "      <td>31 a 50 personas</td>\n",
-              "      <td>CALLE</td>\n",
-              "      <td>TIZIANO</td>\n",
-              "      <td>CALLE</td>\n",
-              "      <td>...</td>\n",
-              "      <td>Aguascalientes                                ...</td>\n",
-              "      <td>0587</td>\n",
-              "      <td>15</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>CUATROMCOMENRCIALIZADORA@HOTMAIL.COM</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>Fijo</td>\n",
-              "      <td>21.880054</td>\n",
-              "      <td>-102.321495</td>\n",
-              "      <td>2016-01</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>9201426</td>\n",
-              "      <td>01001315229003211000026910S2</td>\n",
-              "      <td>4M COMERCIALIZADORA</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>315229</td>\n",
-              "      <td>Confección en serie de otra ropa exterior de m...</td>\n",
-              "      <td>0 a 5 personas</td>\n",
-              "      <td>CALLE</td>\n",
-              "      <td>NAVARRETE</td>\n",
-              "      <td>PRIVADA</td>\n",
-              "      <td>...</td>\n",
-              "      <td>Aguascalientes                                ...</td>\n",
-              "      <td>0591</td>\n",
-              "      <td>22</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>4MCOMERCIALIZADORA@TELMEXMAIL.COM</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>Fijo</td>\n",
-              "      <td>21.877449</td>\n",
-              "      <td>-102.317161</td>\n",
-              "      <td>2019-11</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>40895</td>\n",
-              "      <td>01001315229001953001026910M1</td>\n",
-              "      <td>4M COMERCIALIZADORA SA DE CV</td>\n",
-              "      <td>4M COMERCIALIZADORA SA DE CV</td>\n",
-              "      <td>315229</td>\n",
-              "      <td>Confección en serie de otra ropa exterior de m...</td>\n",
-              "      <td>51 a 100 personas</td>\n",
-              "      <td>CALLE</td>\n",
-              "      <td>PROLONGACIÓN AQUILES ELORDUY</td>\n",
-              "      <td>CALLE</td>\n",
-              "      <td>...</td>\n",
-              "      <td>Aguascalientes                                ...</td>\n",
-              "      <td>0587</td>\n",
-              "      <td>15</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>4MCOMERCIALIZADORA@TELMEXMAIL.COM</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>Fijo</td>\n",
-              "      <td>21.880589</td>\n",
-              "      <td>-102.321566</td>\n",
-              "      <td>2014-12</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>6923705</td>\n",
-              "      <td>01001311812005472000000000U5</td>\n",
-              "      <td>ABUELA PANES</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>311812</td>\n",
-              "      <td>Panificación tradicional</td>\n",
-              "      <td>6 a 10 personas</td>\n",
-              "      <td>CALLE</td>\n",
-              "      <td>GENERAL MIGUEL BARRAGAN</td>\n",
-              "      <td>CALLE</td>\n",
-              "      <td>...</td>\n",
-              "      <td>Aguascalientes                                ...</td>\n",
-              "      <td>052A</td>\n",
-              "      <td>25</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>Fijo</td>\n",
-              "      <td>21.890436</td>\n",
-              "      <td>-102.289305</td>\n",
-              "      <td>2019-11</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "<p>5 rows × 42 columns</p>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "        id                          clee                     nom_estab  \\\n",
-              "0    32374  01001311812004094000000000U8                    4 HERMANOS   \n",
-              "1  6710478  01001315223001071001000000U5           4M COMERCIALIZADORA   \n",
-              "2  9201426  01001315229003211000026910S2           4M COMERCIALIZADORA   \n",
-              "3    40895  01001315229001953001026910M1  4M COMERCIALIZADORA SA DE CV   \n",
-              "4  6923705  01001311812005472000000000U5                  ABUELA PANES   \n",
-              "\n",
-              "                     raz_social  codigo_act  \\\n",
-              "0                           NaN      311812   \n",
-              "1  4M COMERCIALIZADORA SA DE CV      315223   \n",
-              "2                           NaN      315229   \n",
-              "3  4M COMERCIALIZADORA SA DE CV      315229   \n",
-              "4                           NaN      311812   \n",
-              "\n",
-              "                                          nombre_act            per_ocu  \\\n",
-              "0                           Panificación tradicional   31 a 50 personas   \n",
-              "1                   Confección en serie de uniformes   31 a 50 personas   \n",
-              "2  Confección en serie de otra ropa exterior de m...     0 a 5 personas   \n",
-              "3  Confección en serie de otra ropa exterior de m...  51 a 100 personas   \n",
-              "4                           Panificación tradicional    6 a 10 personas   \n",
-              "\n",
-              "  tipo_vial                      nom_vial tipo_v_e_1  ...  \\\n",
-              "0     CALLE                          LIMA      CALLE  ...   \n",
-              "1     CALLE                       TIZIANO      CALLE  ...   \n",
-              "2     CALLE                     NAVARRETE    PRIVADA  ...   \n",
-              "3     CALLE  PROLONGACIÓN AQUILES ELORDUY      CALLE  ...   \n",
-              "4     CALLE       GENERAL MIGUEL BARRAGAN      CALLE  ...   \n",
-              "\n",
-              "                                           localidad  ageb manzana  \\\n",
-              "0  Aguascalientes                                ...  2047      32   \n",
-              "1  Aguascalientes                                ...  0587      15   \n",
-              "2  Aguascalientes                                ...  0591      22   \n",
-              "3  Aguascalientes                                ...  0587      15   \n",
-              "4  Aguascalientes                                ...  052A      25   \n",
-              "\n",
-              "     telefono                            correoelec  www tipoUniEco  \\\n",
-              "0  4499168611             AGELICADELHER@HOTMAIL.COM  NaN       Fijo   \n",
-              "1         NaN  CUATROMCOMENRCIALIZADORA@HOTMAIL.COM  NaN       Fijo   \n",
-              "2         NaN     4MCOMERCIALIZADORA@TELMEXMAIL.COM  NaN       Fijo   \n",
-              "3         NaN     4MCOMERCIALIZADORA@TELMEXMAIL.COM  NaN       Fijo   \n",
-              "4         NaN                                   NaN  NaN       Fijo   \n",
-              "\n",
-              "     latitud    longitud  fecha_alta  \n",
-              "0  21.872900 -102.308631     2014-12  \n",
-              "1  21.880054 -102.321495     2016-01  \n",
-              "2  21.877449 -102.317161     2019-11  \n",
-              "3  21.880589 -102.321566     2014-12  \n",
-              "4  21.890436 -102.289305     2019-11  \n",
-              "\n",
-              "[5 rows x 42 columns]"
-            ]
-          },
-          "execution_count": 106,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
-        "df = pd.read_csv('C:\\\\Users\\\\lajs5\\\\Downloads\\\\conjunto_de_datos\\\\denue_inegi_31-33_.csv', encoding=\"ISO-8859-1\", low_memory=False)\n",
-        "df.head()"
+        "#df = pd.read_csv('C:\\\\Users\\\\lajs5\\\\Downloads\\\\conjunto_de_datos\\\\denue_inegi_31-33_.csv', encoding=\"ISO-8859-1\", low_memory=False)\n",
+        "#df.head()\n",
+        "\n",
+        "import zipfile\n",
+        "with zipfile.ZipFile('./denue_00_31-33_1121_csv.zip', 'r') as zip_ref:\n",
+        "    zip_ref.extractall('./')"
       ]
     },
     {
@@ -1294,13 +1070,17 @@
         "import plotly.express as px\n",
         "import plotly.graph_objects as go\n",
         "import requests\n",
+        "import zipfile\n",
+        "\n",
+        "with zipfile.ZipFile('./denue_00_31-33_1121_csv.zip', 'r') as zip_ref:\n",
+        "    zip_ref.extractall('./')\n",
         "repo_url = 'https://raw.githubusercontent.com/angelnmara/geojson/master/mexicoHigh.json' \n",
         "#Archivo GeoJSON\n",
         "mx_regions_geo = requests.get(repo_url).json()\n",
         "app = Dash(__name__)\n",
         "\n",
         "# cargamos nuestro conjunto de datos\n",
-        "dfDatos = pd.read_csv('C:\\\\Users\\\\lajs5\\\\Downloads\\\\conjunto_de_datos\\\\denue_inegi_31-33_.csv', encoding=\"ISO-8859-1\", low_memory=False)\n",
+        "dfDatos = pd.read_csv('./conjunto_de_datos/denue_inegi_31-33_.csv', encoding=\"ISO-8859-1\", low_memory=False)\n",
         "# ahora convertimos la columna fecha_alta a tipo fecha en años para facilitar el filtrado\n",
         "dfDatos['fecha_alta'] = pd.to_datetime(dfDatos['fecha_alta'].astype(str), format='%Y-%m')\n",
         "dfDatos['fecha_alta'] = pd.DatetimeIndex(dfDatos['fecha_alta']).year\n",
