se agregan las libreiras faltantes

--- a/Proyecto.ipynb
+++ b/Proyecto.ipynb
@@ -1066,8 +1066,14 @@
         }
       ],
       "source": [
-        "from dash import Dash, dcc, html, Input, Output\n",
-        "import plotly.express as px\n",
+        "from jupyter_dash import JupyterDash # Versión de dash para notebooks\n",
+        "from dash import dcc # Componentes HTML preconstruidos para dashboards\n",
+        "from dash import html # Componentes HTML nativos\n",
+        "from dash.dependencies import Input, Output # Clases Input y Output\n",
+        "import plotly.express as px # Generar gráficas e importar datasets con Plotly\n",
+        "\n",
+        "import pandas as pd # Recolección y manipulación de datos\n",
+        "from dash import Dash\n",
         "import plotly.graph_objects as go\n",
         "import requests\n",
         "import zipfile\n",
