Por problemas con de rendimiento, se reduce csv

--- a/Proyecto.ipynb
+++ b/Proyecto.ipynb
@@ -215,7 +215,7 @@
       ],
       "source": [
         "# Conjunto de datos\n",
-        "dfConjuntoDatos = pd.read_csv('C:\\\\Users\\\\lajs5\\\\Downloads\\\\conjunto_de_datos\\\\denue_inegi_31-33_.csv', encoding=\"ISO-8859-1\",dtype={'telefono': 'string'})\n",
+        "dfConjuntoDatos = pd.read_csv('C:\\\\Users\\\\lajs5\\\\Downloads\\\\conjunto_de_datos\\\\denue_inegi_31-33_.csv', encoding=\"ISO-8859-1\")\n",
         "\n"
       ]
     },
@@ -872,7 +872,7 @@
         "app = Dash(__name__)\n",
         "\n",
         "# cargamos nuestro conjunto de datos\n",
-        "dfDatos = pd.read_csv('./conjunto_de_datos/denue_inegi_31-33_.csv', encoding=\"ISO-8859-1\",dtype={'telefono': 'string'})\n",
+        "dfDatos = pd.read_csv('./conjunto_de_datos/denue_inegi_31-33_.csv', encoding=\"ISO-8859-1\")\n",
         "# ahora convertimos la columna fecha_alta a tipo fecha en años para facilitar el filtrado\n",
         "dfDatos['fecha_alta'] = pd.to_datetime(dfDatos['fecha_alta'].astype(str), format='%Y-%m')\n",
         "dfDatos['fecha_alta'] = pd.DatetimeIndex(dfDatos['fecha_alta']).year\n",
